# tinyraytracer

./: CMakeLists.txt  README.md  Raycasting.sln  Raycasting.vcxproj  Raycasting.vcxproj.filters
include/: 2d.h  3d.h
src/: 2d.cpp  3d.cpp  Raycasting.cpp
